src/components/cards/flipcard/index.scss
.card-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
    padding: 4rem 0rem 2rem;
}

.flip-card {
    background-color: transparent;
    width: var(--card-width, 400px);
    height: 500px;
    perspective: 1000px;
    color: #fff;
    cursor: pointer;
    .flip-card-inner {
        position: relative;
        width: 100%;
        height: 100%;
        text-align: center;
        transform-style: preserve-3d;
        transition: all 0.6s cubic-bezier(0.645, 0.045, 0.0355, 1);
    }

    &:hover .flip-card-inner {
        transform: rotateY(180deg);
    }
    &:nth-child(even) {
        margin-top: -1.2rem;
        height: 540px;
    }
    .flip-card-front,
    .flip-card-back {
        position: absolute;
        width: 100%;
        height: 100%;
        backface-visibility: hidden;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        border-radius: 8px;
    }

    .flip-card-front {
        background: var(--nav);
        box-shadow: 0 0 10px 1px #c6afff46;
        img {
            width: 400px;
            height: 640px;
            object-fit: cover;
            opacity: 0.7;
        }
        .name {
            padding: 0 0.3rem;
        }
        .front-title {
            display: flex;
            justify-content: center;
            align-items: center;
            text-transform: capitalize;
            margin-top: -12rem;
            background: var(--nav);
            min-width: fit-content;
            height: 100px;
            width: 100%;
            z-index: 9999;
        }
        
    }

    .flip-card-back {
        color: #fff;
        transform: rotateY(180deg);
        padding: 4rem 1rem;
        position: relative;
        .card-back-image {
            position: absolute;
            top: 0;
            left: 0;
            width: 400px;
            height: 640px;
            object-fit: cover;
            opacity: 0.4;
            z-index: 0;
        }

        &::before {
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            width: 400px;
            height: 640px;
            background: rgba(0, 0, 0, 0.4);
            z-index: 1;
        }
        .name {
            text-transform: capitalize;
        }

        .name,
        .desc,
        .btn-container {
            position: relative;
            z-index: 2;
            text-shadow: #000 5px 5px 10px;
        }

        .desc {
            font-size: 1.3rem;
            margin-bottom: 20px;
            color: var(--secondary);
        }

        .btn-container {
            margin: 1rem;
        }
    }
}
@media screen and (max-width: 768px) {
    .flip-card-front .front-title {
            display: none;
        }
}

